fix UserPresenter
