# src/controllers/user/user.presenter.ts
@@ -1,5 +1,5 @@
 import { ApiProperty } from '@nestjs/swagger';
-import { User, ActiveStatus } from 'src/domain';
+import { User, ActiveStatus, SpaceRole } from 'src/domain';
 
 export class UserPresenter {
   @ApiProperty()
@@ -14,10 +14,14 @@ export class UserPresenter {
   @ApiProperty({ enum: ActiveStatus })
   readonly activeStatus: ActiveStatus;
 
+  @ApiProperty({ enum: SpaceRole })
+  readonly spaceRole: SpaceRole;
+
   constructor(user: User) {
     this.id = user.getId;
     this.name = user.getName;
     this.imageUrl = user.getImageUrl;
     this.activeStatus = user.getActiveStatus;
+    this.spaceRole = user.getSpaceRole;
   }
 }
